# AquaGuard_Agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  agent.md  main.py  pyproject.toml  requirements.txt
data/: .gitkeep
prompts/: base_prompts.txt
skills/: data_ingestion_agent.md  education_agent.md  orchestrator.md  prediction_agent.md  recommendation_agent.md
tools/: water_analysis_tool.py
